--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.MainActivity2"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -21,7 +21,7 @@
 
         <activity
             android:theme="@style/AppTheme.NoActionBar"
-            android:name=".DatePickerActivity"></activity>
+            android:name=".ui.DatePickerActivity"></activity>
 
     </application>
 
