--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'com.android.support:design:23.4.0'
     compile project(':mvp_base')
     compile 'cn.aigestudio.datepicker:DatePicker:2.2.0'
+    compile 'com.android.support:cardview-v7:24.0.0'
 }
