--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,6 @@ dependencies {
     compile project(':mvp_base')
     compile 'cn.aigestudio.datepicker:DatePicker:2.2.0'
     compile 'com.android.support:cardview-v7:24.0.0'
+    compile 'co.lujun:androidtagview:1.0.3'
 
 }
