--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,6 @@ dependencies {
     compile 'cn.aigestudio.datepicker:DatePicker:2.2.0'
     compile 'com.android.support:cardview-v7:24.0.0'
     compile 'co.lujun:androidtagview:1.0.3'
-
+    compile 'org.litepal.android:core:1.3.2'
 
 }
