--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,5 +29,7 @@ dependencies {
     compile 'com.android.support:cardview-v7:24.0.0'
     compile 'co.lujun:androidtagview:1.0.3'
     compile 'org.litepal.android:core:1.3.2'
+    compile 'com.android.support:palette-v7:21.0.+'
+    compile 'com.readystatesoftware.systembartint:systembartint:1.0.3'
 
 }
