--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
 
         <activity
             android:theme="@style/AppTheme.NoActionBar"
-            android:name=".ui.activity.activityTest"></activity>
+            android:name=".ui.activity.SettingActivity"></activity>
 
     </application>
 
