增加 html 的about app webview

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,9 @@
         <activity
             android:theme="@style/AppTheme.NoActionBar"
             android:name=".ui.activity.SettingActivity"></activity>
+        <activity
+            android:theme="@style/AppTheme.NoActionBar"
+            android:name=".ui.activity.AboutAppActivity"></activity>
 
     </application>
 
