--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,12 @@ dependencies {
     compile 'org.litepal.android:core:1.3.2'
     compile 'com.android.support:palette-v7:21.0.+'
     compile 'com.readystatesoftware.systembartint:systembartint:1.0.3'
+    compile 'com.umeng.analytics:analytics:latest.integration'
 
+    compile 'io.reactivex:rxjava:1.1.0'
+    compile 'io.reactivex:rxandroid:1.1.0'
+    compile 'com.google.code.gson:gson:2.4'
+    compile 'com.squareup.retrofit2:retrofit:2.0.2'
+    compile 'com.squareup.retrofit2:converter-gson:2.0.2'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.0.2'
 }
